# nexus-sn

./: .envrc  .file-size-baseline.json  .gitignore  .pre-commit-config.yaml  .ratchet.json  .semgrepignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  cosmic-ray.toml  coverage.json  env.example  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.local.json
.claude/hooks/: _run.py  _venv_run.py  post-edit-lint.py  pre-edit-validate.py
.claude/scripts/: primer-reconcile.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  validate-templates.yml
.primer/: active.md  brief.md  charter.md  decisions.md  governance.md  patterns.md  product.md  progress.md  roadmap.md  sprint-status.yaml  stack.md
.primer/adr/: ADR-001-api-direct-architecture.md  ADR-002-template-github-sync.md  ADR-003-assessment-3-gate-model.md  ADR-004-calver-versioning.md  ADR-005-connector-plugin-system.md  ADR-006-python-3-14-minimum.md  ADR-007-zero-type-ignore.md  ADR-008-type-annotation-completeness.md  ADR-009-behavioral-test-completeness.md  ADR-010-resource-lifecycle-in-tests.md  ADR-011-3-tier-enforcement-model.md  ADR-012-dual-type-checking.md  ADR-013-lean-ci-solo-dev.md  ADR-015-claude-agent-sdk-migration.md  ADR-016-semgrep-semantic-governance.md  ADR-017-canonical-caching-decorator.md  ADR-018-tier-detection.md  ADR-019-simplify-lessons-learned.md  ADR-020-self-update.md  ADR-021-frozen-model-validators.md  ADR-022-cli-deferred-imports.md  ADR-023-file-size-limits.md  ADR-024-framedviewer-supersedes-pypager.md  ADR-025-replatform-cross-instance-analysis.md  ADR-026-selective-migration-planner.md  ADR-template.md
.primer/archive/: INDEX.md  roadmap.md
.primer/brainstorming/: 2026-05-15-cli-ux-wow-factor.md  2026-05-18-cli-ux-implementation-plan.md  2026-05-18-nexus-setup-credential-wizard.md  2026-05-18-nexus-sync-catalog.md  2026-05-19-nexus-assessment-rule-engine.md  2026-05-19-nexus-template-library.md  2026-06-29-nexus-assess-migration.md  2026-07-02-selective-migration-planner.md
.primer/policies/: registry.yaml
.primer/prd/: PRD-001-cli-ux-wow-factor.md  PRD-002-nexus-assessment.md  PRD-003-nexus-template-library.md  PRD-004-nexus-replatform-checklist.md  PRD-005-nexus-migration-planner.md
.primer/stories/: 2026.05.01-cli-paged-list-widget.md  2026.05.02-cli-batch-progress-eta.md
.semgrep/: rules.yml
artifacts/replatform-proof/: alectri-inventory.json  capability-sheet.md  replatform-checklist-v2.md  replatform-checklist.md  reply.md  retail-inventory.json  run-transcript-v2.txt  run-transcript.txt  verification-summary.md
docs/: CONTRIBUTING.md  schema-image-export.md  sn-internal-api-catalog.md
docs/demo/: _color_test.cast  demo-runner.py  demo-script-core-sc.md  player.html
docs/erd/: bcm-alectri.md  bcm-itsm-alectri.md  cmdb-bcm-alectri.md  doc-acronym-test.md  doc-designer-alectri.md  doc-designer-demo.md  doc-designer-itsm-alectri.md  ham-alectri.md
docs/mindmaps/: bcm-alectri.md  cmdb-bcm-alectri.md  doc-designer-alectri.md
docs/replies/: CS9240769-reponse-luc.md
scripts/: __init__.py  _test_direct_write.py  _test_direct_write_v2.py  check_file_sizes.py  dump_sn_api_catalog.py  smoke_agent.py  smoke_anthropic.py  smoke_apply.py  smoke_apply_live.py  smoke_assess.py  smoke_plugins.py  smoke_templates.py  spike_s0_closure_scale.py  spike_s0_fetch_schema_edges.py  sync_readme.py  validate_assessment_rulesets.py  validate_template_documents.py
src/nexus/: __init__.py  cli.py
templates/: README.md  manifest.json
templates/assessments/: instance-health.yaml  nowassist-incident-triage-readiness.yaml  nowassist-tier1-rephrase-readiness.yaml  post-deploy-checks.yaml  scope-readiness.yaml  simple-approval-flow-readiness.yaml
templates/nowassist-incident-triage/: manifest.yaml  template.yaml
templates/nowassist-tier1-rephrase/: manifest.yaml  template.yaml
templates/simple-approval-flow/: manifest.yaml  template.yaml
tests/: conftest.py  test_agent_client.py  test_api_client.py  test_auth.py  test_auth_keychain.py  test_auth_providers.py  test_batch_progress.py  test_cache_backends.py  test_cache_decorator.py  test_cache_keys.py  test_capabilities.py  test_capabilities_claude_config.py  test_capabilities_runtime_info.py  test_capabilities_status.py  test_capabilities_tier.py  test_capture_fetcher_scalars.py  test_check_file_sizes.py  test_cli_instance.py  test_cli_oauth.py  test_cli_plugins.py  test_cli_plugins_advisories.py  test_cli_plugins_advisories_defer.py  test_cli_plugins_baselines.py  test_cli_plugins_diff.py  test_cli_plugins_drift.py  test_cli_plugins_execute.py  test_cli_plugins_impact.py  test_cli_plugins_orphans.py  test_cli_plugins_outdated.py  test_cli_plugins_recommend.py  test_cli_plugins_updates.py  test_cli_plugins_updates_apply.py  test_cli_plugins_upgrade_batch.py  test_cli_plugins_upgrade_interactive.py  test_cli_prompts.py  test_cli_setup.py  test_cli_status.py  test_cli_sync.py  test_cli_templates.py  test_cli_utils.py  (+72 more)
tests/api/: test_kroki_client.py
tests/assessment/: test_assess_group.py  test_cli_assess.py  test_constraint_count_gte.py  test_constraint_count_lte.py  test_constraint_field_equals.py  test_constraint_field_in.py  test_constraint_record_exists.py  test_dsl_helpers.py  test_gate_report.py  test_gates.py  test_loader.py  test_reporter.py  test_rule_engine_evaluate.py  test_ruleset_schema.py  test_validate_assessment_rulesets_script.py
tests/capture/: test_archive.py  test_capture_engine.py  test_config_fetcher.py  test_errors.py  test_models.py  test_scope_discoverer.py  test_tables.py  test_update_set_writer.py  test_xml_builder.py
tests/cli/: test_assess_replatform_cmd.py  test_commands_schema.py  test_migrate_plan_cmd.py  test_migrate_plan_recheck_cmd.py  test_migrate_preflight_cmd.py  test_migrate_select_cmd.py
tests/config/: test_paths_schema_dir.py
tests/connectors/: test_servicenow_client_extensions.py
tests/fakes/: __init__.py  batch_progress.py  captures.py  fake_advisory_data.py  fake_agent_client.py  fake_anthropic_client.py  gates.py  (+22 more)
(+433 files in other folders)
