[tool.poetry]
name = "nexus-sn"
version = "2026.05.1"
description = "ServiceNow AI architect agent -- standalone CLI with template sync and assessment"
authors = ["Pierre Grothe <pierre.grothe@servicenow.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "nexus", from = "src" }]

[tool.poetry.scripts]
nexus = "nexus.cli:app"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
claude-agent-sdk = ">=0.1"
httpx = ">=0.28"
pydantic = ">=2.9"
pydantic-settings = ">=2.6"
typer = { extras = ["all"], version = ">=0.13" }
rich = ">=13.9"
keyring = ">=25"
diskcache = ">=5.6"
pyyaml = ">=6.0"
packaging = ">=23"

[tool.poetry.extras]
ui = ["nicegui"]

[tool.poetry.dependencies.nicegui]
version = ">=2.0"
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0"
pytest-asyncio = ">=0.24"
pytest-cov = ">=7.0"
mypy = ">=1.0"
pyright = ">=1.1"
ruff = ">=0.15"
black = ">=26.3"
pre-commit = ">=4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -- pytest ------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "scripts"]
addopts = [
    "--cov=nexus",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

# -- coverage ----------------------------------------------------------------

[tool.coverage.run]
source = ["nexus"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# -- mypy --------------------------------------------------------------------

[tool.mypy]
python_version = "3.14"
mypy_path = ["src"]
strict = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
ignore_missing_imports = true
warn_unused_ignores = true

# -- ruff --------------------------------------------------------------------

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "TID", "PT", "RUF", "ANN", "LOG", "G", "T10", "D", "PGH", "PLC0415"]
ignore = [
    "E501",   # line too long -- black handles wrapping
    "ANN401", # Any is legitimate in protocol code
    "ANN204", # __init__ return type is always None
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest.mock".msg = "Mocks are prohibited. Use fakes in tests/fakes/."
"pytest_mock".msg = "Mocks are prohibited. Use fakes in tests/fakes/."

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["nexus"]

# -- black -------------------------------------------------------------------

[tool.black]
target-version = ["py314"]
line-length = 100
